# jni_android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/android/jni/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/android/jni/ffmpeg/: FfmpegPlayer.java  MainActivity.java  PushActivity.java  VideoView.java
app/src/main/jni/: dn_player.c  ffmpegplayer.c  queue.c
app/src/main/jni/include/: com_android_jni_ffmpeg_FfmpegPlayer.h
app/src/main/res/layout/: activity_main.xml  activity_push.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/jni/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
